--- a/canvas/templates/canvas.html
+++ b/canvas/templates/canvas.html
@@ -27,6 +27,8 @@
 
     function option_toggles(e) {
         if (e.keyCode == 32) {
+            currX = e.clientX - canvas.offsetLeft;
+            currY = e.clientY - canvas.offsetTop;
             draw_flag = !draw_flag
         } else if (e.keyCode == 67) {
             erase();
